--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
 node_modules
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+package-lock.json
+srm_tasks.md
+nataly_tasks.md
+diego_tasks.md
+EjemplosEndpoints_Domicilios.md
+
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
