--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "food-delivery-app",
+  "name": "domi-run",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext js,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
-    "firebase": "^10.5.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,23 +18,28 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.51.0",
+    "eslint": "^9.25.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.32.2",
+    "@types/node": "^22.15.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5",
+    "vite": "^6.3.5",
+    "react-tabulator": "^0.21.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.30.1",
     "vite-plugin-eslint": "^1.8.1"
   }
 }
