--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.30.0",
+    "@azure/msal-react": "^1.4.9",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
@@ -17,6 +19,9 @@
     "jsvectormap": "^1.5.3",
     "lucide-react": "^0.477.0",
     "match-sorter": "^6.3.1",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -28,27 +33,30 @@
     "socket.io-client": "^4.8.1",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.17.2",
-    "tailwindcss": "^4.1.5",
     "swiper": "^10.3.1",
+    "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@tailwindcss/vite": "^4.1.5",
+    "@tailwindcss/vite": "^4.1.6",
+    "@types/microsoft-graph": "^2.40.1",
     "@types/node": "^22.15.11",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^5.0.35",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "file-loader": "^6.2.0",
     "globals": "^16.0.0",
-    "postcss": "^8.4.27",
+    "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "react-tabulator": "^0.21.0",
+    "tailwindcss": "^4.1.5",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
