--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@azure/msal-react": "^1.4.9",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.9.0",
+    "classnames": "^2.2.6",
     "formik": "^2.4.6",
     "headlessui": "^0.0.0",
+    "html-react-parser": "^5.2.5",
     "jsvectormap": "^1.5.3",
     "lucide-react": "^0.477.0",
     "match-sorter": "^6.3.1",
     "primeflex": "^4.0.0",
-    "classnames": "^2.2.6",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.5",
     "react": "^18.2.0",
