Update some pages, and update sidebar

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@azure/msal-browser": "^2.30.0",
     "@azure/msal-react": "^1.4.9",
     "@reduxjs/toolkit": "^2.6.1",
+    "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
     "classnames": "^2.2.6",
     "formik": "^2.4.6",
@@ -25,6 +26,7 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.9.5",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-hotkeys-hook": "^5.1.0",
