--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@azure/msal-browser": "^2.30.0",
     "@azure/msal-react": "^1.4.9",
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.6.1",
     "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
