Add Products Page and Update some Pages

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.9.5",
     "react": "^18.2.0",
+    "react_cruds_tsx": "file:",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
