--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "headlessui": "^0.0.0",
     "html-react-parser": "^5.2.5",
     "jsvectormap": "^1.5.3",
+    "leaflet": "^1.9.4",
+    "leaflet.motion": "^0.3.2",
     "lucide-react": "^0.477.0",
     "match-sorter": "^6.3.1",
     "primeflex": "^4.0.0",
@@ -34,6 +36,7 @@
     "react-hot-toast": "^2.4.1",
     "react-hotkeys-hook": "^5.1.0",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
     "react-tag-autocomplete": "^7.5.0",
@@ -48,6 +51,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@tailwindcss/vite": "^4.1.6",
+    "@types/leaflet": "^1.9.18",
     "@types/microsoft-graph": "^2.40.1",
     "@types/node": "^22.15.11",
     "@types/react": "^19.1.2",
